--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <div class="search">
             <label class="search__label">
               <input class="search__label_input" type="text" placeholder="Поиск по сайту">
-              <img class="search__label_close" src="images/icons/search.svg" alt="search icon">
+              <img src="images/icons/search.svg" alt="search icon">
             </label>
           </div>
         </div>
@@ -137,7 +137,7 @@
     </header>
     <main class="main">
       <section class="main-section">
-        <div class="main-section__content">
+        <div class="main-section__content _container">
           <div class="main-section__wrap">
             <div class="breadcrumbs">
               <ul class="breadcrumbs__list" itemscope itemtype="http://schema.org/BreadcrumbList">
