--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Эталон 3.0">
-  <meta name="keywords" content="Эталон 3.0">
-  <meta property="og:title" content="Эталон 3.0">
+  <meta name="description" content="Экспертиза">
+  <meta name="keywords" content="Экспертиза">
+  <meta property="og:title" content="Экспертиза">
   <meta property="og:url" content="ссылка на сайт">
   <meta property="og:image:width" content="1000">
   <meta property="og:image:height" content="500">
-  <meta property="og:description" content="Эталон 3.0>
+  <meta property="og:description" content="Экспертиза">
   <meta property="og:image" content="путь к картинке/image.webp">
-  <title>Эталон 3.0</title>
+  <title>Экспертиза</title>
   <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
-  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/images/favicon.icon">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
   <link rel="stylesheet" href="./css/styles.css">
